src/Korobi/WebBundle/Resources/assets/sass/application/_base.scss
body {
  background: rgb(34, 34, 34);
  background-image: $bodyBackgroundImage;
  background-repeat: repeat;
}

.js-warning {
  width: 100%;
  margin: 0 !important;
}

main {
  @include outer-container($main-width);
  margin-top: 1em;
  margin-bottom: $footerHeight + 0.5;
  padding: 0 1em;
}

i.fa {
  color: #eee;
}

a:active,
a:focus {
  outline: dotted 1px #eee;
}

h1 {
  font-size: 0.75 * 2.5714285714285716em;
}

h2 {
  font-size: 0.75 * 2.142857142857143em;
}

h3 {
  font-size: 0.75 * 1.7142857142857142em;
}

h4 {
  font-size: 0.75 * 1.2857142857142858em;
}

h5 {
  font-size: 0.75 * 1em;
}

h6 {
  font-size: 0.75 * 0.8571428571428571em;
}

h1, h2, h3, h4, h5, h5 {
  margin: 0.5em 0 0.25em 0;
}

small,
.small {
  font-size: floor((100% * $font-size-small / $font-size-base));
}

.no-wrapping-paper {
  white-space: nowrap
}

